<resources>
    <string name="app_name">Hello world</string>
    <string name="test">Test</string>
    <string name="desc">Mydescript</string>
    <string name="test_text_view">Hello World!</string>
    <string name="guess_activity_header">Heads or Tails</string>

    <string name="heads_action_button">Heads</string>
    <string name="tails_action_button">Tails</string>
    <string name="headTail">Heads or Tails</string>
    <string name="zero">0</string>
    <string name="highScore"> </string>
    <string name="score">High score:</string>
    <string name="right"> </string>
    <string name="wrong"> </string>

    <string name="webView"> </string>

    <string name="location"> </string>
    <string name="timerButton"> </string>
    <string name="contactsButton"> </string>

    <string name="alarmClockButton">Alarm Clock</string>

    <string name="toggleButton"> </string>
    <string name="pauseButton">Pause</string>

    <string-array name="timer_array">
        <item>Seconds</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>

    <string name="timerText"> </string>

    <string name="timerTextOn">Off</string>
    <string name="timerTextOff">On</string>
    <string name="stopWatchImage"> </string>
    <string name="title_activity_contacts">ContactsActivity</string>

    <string name="contactsText"> </string>
    <string name="firstNameContact"> </string>
    <string name="lastNameContact"> </string>
    <string name="phoneNumberContact"> </string>
    <string name="emailAddressContact"> </string>
    <string name="title_activity_alarm_clock">AlarmClock</string>
    
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <string name="nav_guess">Guessing game</string>
    <string name="nav_alarm">Alarm clock</string>
    <string name="nav_timer">Timer</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_maps">Maps</string>




</resources>