<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="124dp"
        android:text="@string/toggleButton"
        android:textOff="@string/timerTextOff"
        android:textOn="@string/timerTextOn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pauseButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="188dp"
        android:layout_height="27dp"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextClock
        android:id="@+id/textClock"
        android:layout_width="187dp"
        android:layout_height="74dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="128dp"
        android:format24Hour="hh:mm:ss a"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="167dp"
        android:layout_height="54dp"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="297dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/stopWatchImage"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock"
        app:srcCompat="@drawable/ic_timer_svgrepo_com" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#00CEC1C1"
        android:text="@string/pauseButton"
        android:textColor="#0E0D0D"
        app:layout_constraintBottom_toTopOf="@+id/timerTextView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>