<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewId"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstName"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_margin="30dp"
                android:text="@string/firstNameContact"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastName"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:text="@string/lastNameContact"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:layout_margin="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/phoneNumberContact"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailAddress"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:layout_margin="30dp"
                    android:layout_marginBottom="27dp"
                    android:text="@string/emailAddressContact"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </FrameLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
