<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/ic_liquid_cheese"
    tools:context=".MainPackage.MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/testText"
            android:layout_width="183dp"
            android:layout_height="54dp"
            android:layout_row="0"
            android:layout_column="7"
            android:layout_gravity="center"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="44dp"
            android:background="#D5B63F3F"
            android:fontFamily="casual"
            android:text="@string/test_text_view"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/test_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="144dp"
            android:layout_height="147dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_marginStart="133dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="134dp"
            android:contentDescription="@string/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <Button
            android:id="@+id/test_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="51dp"
            android:text="@string/test"
            app:layout_constraintBottom_toTopOf="@+id/webView_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/webView_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="5"
            android:layout_marginStart="179dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/webView"
            android:onClick="activateWebPage"
            app:layout_constraintBottom_toTopOf="@+id/locationTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="377dp"
            android:layout_height="0dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="44dp"
            android:gravity="center"
            android:text="@string/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>